# game-start

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  game.cc  game.h  game_base.cc  game_base.h  index.html  main.cc
lib/Log/: CMakeLists.txt  log.cc  log.h  log_test.cc
src/: game.cc  game.h  game_base.cc  game_base.h  main.cc
